Added second card and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,24 +8,60 @@
   <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
   <title>Mini Projects Starter</title>
 </head>
+
 <body>
   <h1>Mini Projects Starter</h1>
 
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Free</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">For Freelancers</h6>
-      
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-3">
+        <div class="card rounded-5 shadow-lg">
+          <div class="card-body">
+            <h5 class="card-title p-2 fw-bold">Free</h5>
+            <h6 class="card-subtitle mb-3 text-body-secondary">For Freelancers</h6>
+            <h1 class="mb-4 fw-bolder">$0</h1>
+            <p><i class="bi bi-check2 p-2"></i>Single User</p>
+            <p><i class="bi bi-check2 p-2"></i>10 Downloads Per Month</p>
+            <p><i class="bi bi-check2 p-2"></i>Faster Files</p>
+            <p><i class="bi bi-check2 p-2 pb-5"></i>25 Custom Packs</p>
+            <div class="d-grid col-12 mt-5">
+              <button href="#" class="btn btn-dark btn-sm mt-5s rounded-pill p-0">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-3">
+        <div class="card rounded shadow-lg bg-dark">
+          <div class="card-body">
+            <h5 class="card-title p-2 text-light fw-bold">Pro</h5>
+            <h6 class="card-subtitle mb-3 text-body-secondary text-light">For Agencies</h6>
+            <h1 class="mb-4 text-light fw-bolder">$0</h1>
+            <p class="text-light"><i class="bi bi-check2 p-2"></i>Unlimited Users</p>
+            <p class="text-light"><i class="bi bi-check2 p-2"></i>Unlimited Downloads</p>
+            <p class="text-light"><i class="bi bi-check2 p-2"></i>Fully-Editable Files</p>
+            <p class="text-light"><i class="bi bi-check2 p-2 pb-5"></i>200+ Custom Packs</p>
+            <div class="d-grid col-12 mt-5">
+              <button href="#" class="btn btn-light btn-sm mt-5s rounded-pill p-0">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
   </div>
+
 
 
 
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
