--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
   <div class="container mt-5">
     <div class="row">
-      <div class="col-3">
-        <div class="card rounded-5 shadow-lg">
+      <div class="col-md-6">
+        <!-- col1 -->
+        <div class="card rounded-5 shadow-lg border-0">
           <div class="card-body">
             <h5 class="card-title p-2 fw-bold">Free</h5>
-            <h6 class="card-subtitle mb-3 text-body-secondary">For Freelancers</h6>
+            <h6 class="card-subtitle mb-5 text-body-secondary">For Freelancers</h6>
             <h1 class="mb-4 fw-bolder">$0</h1>
             <p><i class="bi bi-check2 p-2"></i>Single User</p>
             <p><i class="bi bi-check2 p-2"></i>10 Downloads Per Month</p>
@@ -38,11 +39,11 @@
         </div>
       </div>
 
-      <div class="col-3">
+      <div class="col-md-6">
         <div class="card rounded shadow-lg bg-dark">
           <div class="card-body">
             <h5 class="card-title p-2 text-light fw-bold">Pro</h5>
-            <h6 class="card-subtitle mb-3 text-body-secondary text-light">For Agencies</h6>
+            <h6 class="card-subtitle mb-5 text-body-secondary text-light">For Agencies</h6>
             <h1 class="mb-4 text-light fw-bolder">$0</h1>
             <p class="text-light"><i class="bi bi-check2 p-2"></i>Unlimited Users</p>
             <p class="text-light"><i class="bi bi-check2 p-2"></i>Unlimited Downloads</p>
